build.log
A subdirectory or file obj already exists.
A subdirectory or file out already exists.
source/c/kthread.c: In function 'get_ring':
source/c/kthread.c:14:14: error: storage class specified for parameter 'kernel_end'
 extern void* kernel_end;
              ^
source/c/kthread.c:15:14: error: storage class specified for parameter 'stack_start'
 extern void* stack_start;
              ^
source/c/kthread.c:17:1: error: unknown type name 'kthread_t'
 kthread_t* construct_boot_kthread(kthread_t* store_at)
 ^
source/c/kthread.c:17:35: error: unknown type name 'kthread_t'
 kthread_t* construct_boot_kthread(kthread_t* store_at)
                                   ^
source/c/kthread.c:27:1: error: unknown type name 'kthread_t'
 kthread_t* get_kthread(void* store_at, void* entry_point, uint16_t stack_size)
 ^
source/c/kthread.c:28:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
source/c/kthread.c:38:21: error: unknown type name 'kthread_t'
 void switch_kthread(kthread_t* kt)
                     ^
source/c/kthread.c:15:14: error: declaration for parameter 'stack_start' but no such parameter
 extern void* stack_start;
              ^
source/c/kthread.c:14:14: error: declaration for parameter 'kernel_end' but no such parameter
 extern void* kernel_end;
              ^
In file included from source/c/kthread.c:11:0:
source/c/context.h:16:6: error: declaration for parameter 'context_switch' but no such parameter
 void context_switch(void** oldStack, void* newStack);
      ^
source/c/context.h:15:6: error: declaration for parameter 'set_ring' but no such parameter
 void set_ring(uint8_t level);
      ^
source/c/kthread.c:41:1: error: expected '{' at end of input
 }
 ^
source/c/kthread.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
i486-elf-ld: cannot find obj/kthread.o
i486-elf-objcopy: 'obj/kernel.elf': No such file
i486-elf-objcopy: 'obj/kernel.elf': No such file
